bugfix navigation mobile imprint and got to top privacy

--- a/portfolio/src/app/imprint/imprint.component.scss
+++ b/portfolio/src/app/imprint/imprint.component.scss
@@ -1,6 +1,8 @@
 @import "../../../src/app/shared/style/colors.scss"; 
 
 .row-imprint {
+    hyphens: auto;
+    word-wrap: break-word;
     padding: 180px 18px;
     position: relative; 
     h3 {
@@ -9,10 +11,23 @@
         font-size: 45px;
     }
     h1, h2 {
-        font-size: 60px;
+        font-size: 45px;
     }
     li {
         font-size: 23px;
         line-height: 1.8;
+    }
+}
+
+@media (max-width: 800px) {
+    .row-imprint {
+        h3 {
+            color: $primary-color;
+            text-align: left;
+            font-size: 30px;
+        }
+        h1, h2 {
+            font-size: 30px;
+        }
     }
 }
